# graphql-toolkit

./: .editorconfig  Cargo.toml  README.md
graphql-toolkit/: CHANGELOG.md  Cargo.toml  README.md
graphql-toolkit-ast/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
graphql-toolkit-ast/src/: lib.rs  pos.rs  types.rs
graphql-toolkit-ast/src/types/: common.rs  executable.rs  service.rs
graphql-toolkit-parser/: CHANGELOG.md  Cargo.toml  README.md
graphql-toolkit-parser/fuzz/: .gitignore  Cargo.toml
graphql-toolkit-parser/fuzz/fuzz_targets/: parse_query.rs
graphql-toolkit-parser/src/: lib.rs  pos.rs
graphql-toolkit-parser/src/parse/: executable.rs  mod.rs  service.rs
graphql-toolkit-parser/tests/: it_parse_exec_document.rs  recursion_limit.rs
graphql-toolkit-value/: CHANGELOG.md  Cargo.toml  README.md
graphql-toolkit-value/src/: lib.rs  variables.rs
graphql-toolkit-value/tests/: test_serde.rs
graphql-toolkit-writer/: CHANGELOG.md  Cargo.toml  README.md
graphql-toolkit-writer/src/: fmt.rs  lib.rs  ser.rs
graphql-toolkit-writer/src/fmt/: compact.rs  formatter.rs  pretty.rs
graphql-toolkit-writer/tests/: it_fmt_compact_exec_document.rs  it_fmt_pretty_exec_document.rs
graphql-toolkit-writer/tests/snapshots/: it_fmt_compact_exec_document__mutation_named.snap  it_fmt_compact_exec_document__mutation_unnamed.snap  it_fmt_compact_exec_document__query_and_fragment.snap  it_fmt_compact_exec_document__query_and_fragment_with_directive.snap  it_fmt_compact_exec_document__query_and_fragments_multiple.snap  it_fmt_compact_exec_document__query_multiple_fields.snap  it_fmt_compact_exec_document__query_multiple_operations.snap  it_fmt_compact_exec_document__query_named.snap  it_fmt_compact_exec_document__query_named_with_directive.snap  it_fmt_compact_exec_document__query_named_with_variables.snap  it_fmt_compact_exec_document__query_named_with_variables_and_directives.snap  it_fmt_compact_exec_document__query_nested_fields.snap  it_fmt_compact_exec_document__query_shorthand.snap  it_fmt_compact_exec_document__query_with_directive.snap  it_fmt_compact_exec_document__query_with_directive_with_arguments.snap  it_fmt_compact_exec_document__query_with_directives_multiple.snap  it_fmt_compact_exec_document__query_with_field_alias.snap  it_fmt_compact_exec_document__query_with_field_and_arguments_and_directive.snap  it_fmt_compact_exec_document__query_with_field_and_boolean_argument.snap  it_fmt_compact_exec_document__query_with_field_and_bytes_argument.snap  it_fmt_compact_exec_document__query_with_field_and_directive.snap  it_fmt_compact_exec_document__query_with_field_and_directive_with_arguments.snap  it_fmt_compact_exec_document__query_with_field_and_enum_argument.snap  it_fmt_compact_exec_document__query_with_field_and_list_argument_nested.snap  it_fmt_compact_exec_document__query_with_field_and_multiple_arguments.snap  it_fmt_compact_exec_document__query_with_field_and_multiple_directives.snap  it_fmt_compact_exec_document__query_with_field_and_multiple_number_arguments.snap  it_fmt_compact_exec_document__query_with_field_and_null_argument.snap  it_fmt_compact_exec_document__query_with_field_and_number_argument.snap  it_fmt_compact_exec_document__query_with_field_and_object_argument.snap  it_fmt_compact_exec_document__query_with_field_and_object_argument_nested.snap  it_fmt_compact_exec_document__query_with_field_and_string_argument.snap  it_fmt_compact_exec_document__query_with_field_and_variable_argument.snap  it_fmt_compact_exec_document__query_with_inline_fragment.snap  it_fmt_compact_exec_document__query_with_inline_fragment_with_directive.snap  it_fmt_compact_exec_document__query_with_inline_fragment_with_multiple_directives.snap  it_fmt_compact_exec_document__query_with_inline_fragment_with_type_condition.snap  it_fmt_compact_exec_document__query_with_inline_fragment_with_type_condition_and_directive.snap  it_fmt_compact_exec_document__query_with_spread_fragment.snap  it_fmt_compact_exec_document__query_with_spread_fragment_with_directive.snap  (+50 more)
graphql-toolkit/src/: ast.rs  de.rs  lib.rs  ser.rs
graphql-toolkit/src/ser/: compact_formatter.rs  formatter.rs  pretty_formatter.rs  serializer.rs
graphql-toolkit/tests/: it_de_parse_query.rs  it_ser_compact_formatter_query.rs  it_ser_pretty_formatter_query.rs
graphql-toolkit/tests/snapshots/: .gitignore  it_ser_compact_formatter_query__mutation_named.snap  it_ser_compact_formatter_query__mutation_unnamed.snap  it_ser_compact_formatter_query__query_and_fragment.snap  it_ser_compact_formatter_query__query_and_fragment_with_directive.snap  it_ser_compact_formatter_query__query_and_fragment_with_directives.snap  it_ser_compact_formatter_query__query_and_fragments_multiple.snap  it_ser_compact_formatter_query__query_field_boolean_literal_argument.snap  it_ser_compact_formatter_query__query_field_bytes_argument.snap  it_ser_compact_formatter_query__query_field_list_argument.snap  it_ser_compact_formatter_query__query_field_list_argument_nested.snap  it_ser_compact_formatter_query__query_field_multiple_number_arguments.snap  it_ser_compact_formatter_query__query_field_object_argument.snap  it_ser_compact_formatter_query__query_field_object_argument_nested.snap  it_ser_compact_formatter_query__query_field_single_argument.snap  it_ser_compact_formatter_query__query_field_string_literal_argument.snap  it_ser_compact_formatter_query__query_field_with_directive.snap  it_ser_compact_formatter_query__query_field_with_directive_args.snap  it_ser_compact_formatter_query__query_field_with_enum_argument.snap  it_ser_compact_formatter_query__query_field_with_multiple_directives.snap  it_ser_compact_formatter_query__query_minimal.snap  it_ser_compact_formatter_query__query_multiple_fields.snap  it_ser_compact_formatter_query__query_multiple_named_queries.snap  it_ser_compact_formatter_query__query_multiple_operations.snap  it_ser_compact_formatter_query__query_named.snap  it_ser_compact_formatter_query__query_named_field_selections_nested.snap  (+90 more)
testlib/parser-testdata/: Cargo.toml  build.rs
testlib/parser-testdata/src/: lib.rs
(+66 files in other folders)
