[package]
name = "graphql-toolkit-ast"
description = "A Rust library for working with GraphQL abstract syntax trees"
version = "0.1.1"
repository = "https://github.com/LNSD/graphql-toolkit"
authors = ["Lorenzo Delgado (LNSD) <lnsdev@proton.me>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.71.1"

[dependencies]
async-graphql-parser = "7.0.5"
graphql-toolkit-value = { version = "0.1.0", path = "../graphql-toolkit-value" }
