[package]
name = "graphql-toolkit-ast"
description = "A Rust library for working with GraphQL abstract syntax trees"
version = "0.2.1"
repository = "https://github.com/LNSD/graphql-toolkit"
authors = ["Lorenzo Delgado (LNSD) <lnsdev@proton.me>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.71.1"

[dependencies]
graphql-toolkit-value = { version = "0.2.0", path = "../graphql-toolkit-value" }
serde = { version = "1.0.203", features = ["derive"] }
