[package]
name = "graphql-toolkit-parser"
description = "A GraphQL document parser"
version = "0.1.2"
repository = "https://github.com/LNSD/graphql-toolkit"
authors = ["Lorenzo Delgado (LNSD) <lnsdev@proton.me>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.71.1"

[dependencies]
async-graphql-parser = "7.0.5"
graphql-toolkit-ast = "0.1.2"

[dev-dependencies]
assert_matches = "1.5.0"
testlib-parser-testdata = { path = "../testlib/parser-testdata" }
