[package]
name = "graphql-toolkit-parser"
description = "A GraphQL document parser"
version = "0.2.0"
repository = "https://github.com/LNSD/graphql-toolkit"
authors = ["Lorenzo Delgado (LNSD) <lnsdev@proton.me>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.71.1"

[dependencies]
graphql-toolkit-ast = { version = "0.2.0", path = "../graphql-toolkit-ast" }
pest = "2.7.10"
serde = "1.0.203"

[dev-dependencies]
assert_matches = "1.5.0"
pest_generator = "2.7.10"
proc-macro2 = "1.0.85"
testlib-parser-testdata = { path = "../testlib/parser-testdata" }
