[package]
name = "graphql-toolkit-value"
description = "GraphQL Toolkit value definitions"
version = "0.2.0"
repository = "https://github.com/LNSD/graphql-toolkit"
authors = ["Lorenzo Delgado (LNSD) <lnsdev@proton.me>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.71.1"

[dependencies]
bytes = { version = "1.6.0", features = ["serde"] }
indexmap = { version = "2.2.6", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
