[package]
name = "graphql-toolkit-writer"
description = "A GraphQL document writer"
version = "0.1.0"
repository = "https://github.com/LNSD/graphql-toolkit"
authors = ["Lorenzo Delgado (LNSD) <lnsdev@proton.me>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.71.1"

[dependencies]
async-graphql-value = "7.0.5"
