[package]
name = "graphql-toolkit-writer"
description = "A GraphQL document writer"
version = "0.2.1"
repository = "https://github.com/LNSD/graphql-toolkit"
authors = ["Lorenzo Delgado (LNSD) <lnsdev@proton.me>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.71.1"

[dependencies]
anyhow = "1.0.86"
graphql-toolkit-ast = { version = "0.2.1", path = "../graphql-toolkit-ast" }
itoa = { version = "1.0.11", default-features = false }
ryu = { version = "1.0.18", default-features = false }

[dev-dependencies]
graphql-toolkit-parser = { version = "0.2.1", path = "../graphql-toolkit-parser" }
indoc = "2.0.5"
insta = "1.39.0"
