[package]
name = "graphql-toolkit"
description = "A collection of Rust modules to process GraphQL documents"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/LNSD/graphql-toolkit"
authors = ["Lorenzo Delgado (LNSD) <lnsdev@proton.me>"]
license = "Apache-2.0"
rust-version = "1.71.1"

[dependencies]
anyhow = "1.0"
async-graphql-parser = "7.0"
async-graphql-value = "7.0"
graphql-toolkit-ast = { version = "0.1.0", path = "../graphql-toolkit-ast" }
itoa = { version = "1.0", default-features = false }
ryu = { version = "1.0", default-features = false }

[dev-dependencies]
assert_matches = "1.5"
indoc = "2.0.5"
insta = "1.38.0"
